--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,30 @@
 url: https://zsyfirst.github.io/Project3_SiyuZou/
 template:
   bootstrap: 5
+  params:
+    bootswatch: flatly
+    bslib:
+      bg: '#f8f9fa'
+      fg: '#212529'
+      primary: '#0d6efd'
+      font:
+        google:
+        - Fira Sans
+        - sans-serif
+navbar:
+  title: MaxSiyu Package
+  type: default
+  left:
+  - href: index.html
+    text: Home
+  - href: authors.html
+    text: About author
+  - href: articles/Example_analysis.html
+    text: Example Analysis
+  right:
+  - icon: fab fa-github
+    href: https://github.com/zsyfirst/Project3_pkgdown_SiyuZou
+format:
+  html:
+    theme: minty
 
-#
